# Paper2Slides

./: .gitignore  main.py  pyproject.toml
api/: server.py
frontend/: vite.config.js
frontend/src/components/: ChatWindow.jsx  ConfigPanel.jsx
paper2slides/core/: pipeline.py
paper2slides/core/stages/: generate_stage.py  plan_stage.py  rag_stage.py  summary_stage.py
paper2slides/generator/: config.py  content_planner.py  image_generator.py
paper2slides/prompts/: __init__.py  content_planning.py  image_generation.py
paper2slides/rag/: query.py
scripts/api/: test_api.py
