[project]
name = "paper2slides"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.122",
    "huggingface-hub>=0.36.0",
    "langfuse>=3.10.5",
    "lightrag-hku>=1.4.9.8",
    "mineru[core]==2.6.4",
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "pydantic==2.12.3",
    "python-dotenv>=1.0.0",
    "python-multipart==0.0.20",
    "pyyaml>=6.0",
    "reportlab>=4.0.0",
    "requests>=2.28.0",
    "tqdm>=4.67.1",
    "uvicorn[standard]==0.38.0",
]
